--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@types/node": "20.2.6",
     "@types/react": "18.2.10",
@@ -24,6 +25,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-gravatar": "^2.6.3",
+    "react-responsive": "^9.0.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "zustand": "^4.3.8"
